--- a/app/demo/index.html
+++ b/app/demo/index.html
@@ -10,7 +10,7 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="css/ruler.css" />
+    <link rel="stylesheet" href="../css/ruler.css" />
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <!-- endbower -->
@@ -25,8 +25,8 @@ Scale:<input onchange="setScale(this.value)"/>
 <div id="wrapper">
 
 </div>
-<script type="text/javascript" src="js/ruler.js"></script>
-<script type="text/javascript" src="js/demo.js"></script>
+<script type="text/javascript" src="../js/ruler.js"></script>
+<script type="text/javascript" src="demo.js"></script>
 </body>
 
 </html>
