--- a/app/demo/index.html
+++ b/app/demo/index.html
@@ -26,6 +26,9 @@ Scale:<input onchange="setScale(this.value)"/>
 
 </div>
 <script type="text/javascript" src="../js/ruler.js"></script>
+<script type="text/javascript" src="../js/utils.js"></script>
+<script type="text/javascript" src="../js/rulerGuideLine.js"></script>
+<script type="text/javascript" src="../js/rulerConstructor.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 </body>
 
