--- a/app/demo/index.html
+++ b/app/demo/index.html
@@ -5,6 +5,16 @@
     <title>Demo</title>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <style>
+        #wrapper{
+            height: 800px;
+            width: 1200px;
+            border: 1px solid green;
+            margin: auto;
+            position: relative;
+
+        }
+    </style>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
