--- a/app/demo/index.html
+++ b/app/demo/index.html
@@ -32,6 +32,7 @@
 X:<input onchange="setPosX(this.value)"/>
 Y:<input onchange="setPosY(this.value)"/>
 Scale:<input onchange="setScale(this.value)"/>
+<button onclick="destory()">Destroy</button>
 <div id="wrapper">
 
 </div>
