added set/get guides

--- a/app/demo/index.html
+++ b/app/demo/index.html
@@ -32,6 +32,9 @@
 X:<input onchange="setPosX(this.value)"/>
 Y:<input onchange="setPosY(this.value)"/>
 Scale:<input onchange="setScale(this.value)"/>
+<button onclick="clearGuides()">Clear Guides</button>
+<button onclick="storeGuides()">Store Guides</button>
+<button onclick="setGuides()">Set Guides</button>
 <button onclick="destory()">Destroy</button>
 <div id="wrapper">
 
